--- a/styles/index.css
+++ b/styles/index.css
@@ -1,4 +1,14 @@
 @charset "UTF-8";
+footer {
+  background-color: #2A2625;
+}
+footer .ft_left {
+  display: flex;
+  flex-flow: column nowrap;
+  gap: 23px;
+  align-items: flex-start;
+  justify-content: center;
+}
 body {
   max-width: 1920px;
   width: 100%;
@@ -49,14 +59,15 @@ body header .left_nav .gnb_wrap #gnb {
   display: flex;
   flex-flow: column nowrap;
   gap: 25px;
+  /* 라인별 등등 */
+}
+body header .left_nav .gnb_wrap #gnb .gnb_menu_title {
+  /* Global Menu Name */
 }
 body header .left_nav .gnb_wrap #gnb .gnb_menu_title > a {
   font-weight: 500;
   letter-spacing: -0.02rem;
   color: #594632;
-}
-body header .left_nav .gnb_wrap #gnb .gnb_menu_title {
-  /* Global Menu Name */
 }
 body header .left_nav .gnb_wrap #gnb .gnb_menu_title .gnb_sub {
   display: flex;
@@ -79,9 +90,6 @@ body header .left_nav .gnb_wrap #gnb .gnb_menu_title .gnb_sub .menu_category > l
   letter-spacing: -0.02rem;
   font-size: 0.813rem;
   color: #2C2C2C;
-}
-body header .left_nav .gnb_wrap #gnb {
-  /* 라인별 등등 */
 }
 body header .right_nav #right_menu_icons {
   display: flex;
@@ -149,11 +157,12 @@ body main {
   /* 공통 */
 }
 body main * .prd_link {
+  width: -moz-max-content;
   width: max-content;
   display: block;
 }
 body main * .sect_title {
-  font-size: 2.313rem;
+  font-size: clamp(1.5rem, 3vw, 2.313rem);
   font-weight: 500;
   line-height: 100%;
   letter-spacing: -0.02rem;
@@ -161,17 +170,18 @@ body main * .sect_title {
   font-family: "NanumMyeongjo";
 }
 body main * .prd_name {
-  font-size: 0.875rem;
+  font-size: clamp(0.75rem, 2vw, 0.875rem);
   line-height: 100%;
   letter-spacing: -0.02rem;
 }
 body main * .prd_eng_name {
-  font-size: 0.875rem;
+  font-size: clamp(0.75rem, 2vw, 0.875rem);
   line-height: 100%;
   font-weight: 200;
   letter-spacing: -0.02rem;
 }
 body main * .prd_tag {
+  width: -moz-max-content;
   width: max-content;
   height: 22px;
   padding: 4px 15px;
@@ -182,13 +192,13 @@ body main * .prd_tag {
   line-height: 140%;
 }
 body main * .prd_volume {
-  font-size: 0.75rem;
+  font-size: clamp(0.625rem, 2vw, 0.75rem);
   line-height: 100%;
   font-weight: 300;
   letter-spacing: -0.02rem;
 }
 body main * .price {
-  font-size: 1rem;
+  font-size: clamp(0.875rem, 2vw, 1rem);
   line-height: 100%;
   font-weight: 200;
   letter-spacing: -0.02rem;
@@ -199,7 +209,15 @@ body main * .product_card {
   justify-content: center;
   align-items: flex-start;
   gap: 12px;
+  width: -moz-max-content;
   width: max-content;
+}
+body main * .best_prd_img {
+  width: 100%;
+  aspect-ratio: 380/379;
+  -o-object-fit: cover;
+     object-fit: cover;
+  display: block;
 }
 body main * .more_btn {
   font-size: 1rem;
@@ -236,7 +254,7 @@ body main .main_bnr #main_swiper .swiper-wrapper .swiper-slide span {
   position: absolute;
   left: 386px;
   bottom: 325px;
-  font-size: 2.5rem;
+  font-size: clamp(1.5rem, 2vw, 2.5rem);
   color: #fff;
   font-family: "NanumMyeongjo";
   line-height: 150%;
@@ -310,16 +328,21 @@ body main .main_bnr #main_swiper .main_bnr_nav .swiper-button-next svg {
   display: none;
 }
 body main .best_sec {
-  display: grid;
-  grid-template-columns: 1fr 2fr;
+  /* display: grid;
+  grid-template-columns: 1fr 2fr; */
+  display: flex;
+  flex-flow: row nowrap;
+  max-width: 1920px;
 }
 body main .best_sec .best_left_wrap {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   background-image: url(../images/best_bg.png);
-  max-width: 959px;
-  max-height: 918px;
+  max-width: 900px;
+  max-height: 100vh;
+  width: 100%;
+  min-width: 314px;
   aspect-ratio: 959/918;
   border-bottom-right-radius: 110px;
   border-top-right-radius: 110px;
@@ -327,11 +350,29 @@ body main .best_sec .best_left_wrap {
   top: 0;
 }
 body main .best_sec .best_right_wrap {
+  max-width: calc(100% - 1019px);
+  width: 100%;
   padding: 30px 30px 70px 30px;
 }
+body main .best_sec .best_right_wrap .product_wrap {
+  width: 100%;
+}
 body main .best_sec .best_right_wrap .product_wrap .product_row {
+  width: 100%;
   display: flex;
   flex-flow: row nowrap;
+}
+body main .best_sec .best_right_wrap .product_wrap .product_row .prd_link.card_3, body main .best_sec .best_right_wrap .product_wrap .product_row .prd_link.card_6, body main .best_sec .best_right_wrap .product_wrap .product_row .prd_link.card_9 {
+  display: none;
+}
+body main .best_sec .best_right_wrap .product_wrap .row1 .card3 {
+  display: none;
+}
+body main .best_sec .best_right_wrap .product_wrap .row2 .card6 {
+  display: none;
+}
+body main .best_sec .best_right_wrap .product_wrap .row2 .card9 {
+  display: none;
 }
 body main .sub_bnr_sec {
   padding: 50px 0;
@@ -360,9 +401,11 @@ body main .recom_sec .product_wrap {
 body main .recom_sec .product_wrap .product_row {
   display: flex;
   flex-flow: row nowrap;
+  justify-content: space-between;
 }
 body main .recom_sec .product_wrap .product_row .prd_link .product_card > img {
-  width: 100%;
+  aspect-ratio: 380/379;
+  width: 380px;
 }
 body main .recom_sec .product_wrap .product_row .prd_link .product_card .prd_info .prd_tag {
   background-color: rgba(14, 162, 102, 0.1);
@@ -379,13 +422,14 @@ body main .etsere_bnr .bnr_wrap {
   aspect-ratio: 1920/915;
   width: 100%;
   max-width: 1920px;
+  min-height: 320px;
   position: relative;
 }
 body main .etsere_bnr .bnr_wrap span {
   position: absolute;
-  left: 360px;
-  top: 402px;
-  font-size: clamp(1.5625rem, 5vw, 2.5rem);
+  left: 10%;
+  top: 45%;
+  font-size: clamp(1.1rem, 2vw, 2.5rem);
   color: #fff;
   font-family: "NanumMyeongjo";
   line-height: 150%;
@@ -403,8 +447,8 @@ body main .etsere_bnr .bnr_wrap .bnr_popup {
   border-radius: 10px;
   text-align: center;
   position: relative;
-  top: 376px;
-  left: 1280px;
+  top: 45%;
+  left: 67%;
 }
 body main .etsere_bnr .bnr_wrap .bnr_popup #bnr_plus_btn {
   position: absolute;
@@ -572,6 +616,4 @@ body main .review_sec .swiper_box #review_swiper .swiper-button-next {
 }
 body main .review_sec .swiper_box #review_swiper .swiper-button-prev {
   left: -30px;
-}
-
-/*# sourceMappingURL=index.css.map */
+}/*# sourceMappingURL=index.css.map */
