--- a/styles/main.css
+++ b/styles/main.css
@@ -5,7 +5,7 @@ body {
 }
 body header {
   padding: 30px;
-  background-color: #0EA266;
+  background-color: transparent;
   position: absolute;
   top: 0;
   left: 0;
@@ -16,12 +16,20 @@ body header {
   justify-content: space-between;
   align-items: center;
 }
+body header .left_nav {
+  position: absolute;
+  top: 6%;
+  left: 1%;
+}
 body header .left_nav .logo_gnb_icon {
   display: flex;
   flex-flow: column nowrap;
-  gap: 10px;
+  gap: 5px;
   justify-content: center;
   align-items: flex-start;
+}
+body header .left_nav .logo_gnb_icon:hover .gnb_wrap {
+  display: block;
 }
 body header .left_nav .logo_gnb_icon .logo a {
   font-size: 1.688rem;
@@ -29,7 +37,7 @@ body header .left_nav .logo_gnb_icon .logo a {
   font-family: "NanumMyeongjo";
   color: #fff;
 }
-body header .left_nav .gnb_wrap { /* 임시 */
+body header .left_nav .logo_gnb_icon .gnb_wrap {
   display: none;
   padding: 30px;
   background-color: rgba(205, 193, 176, 0.85);
@@ -37,61 +45,82 @@ body header .left_nav .gnb_wrap { /* 임시 */
   height: 792px;
   border-top-right-radius: 80px;
 }
-body header .left_nav .gnb_wrap #gnb_close_btn {
+body header .left_nav .logo_gnb_icon .gnb_wrap #gnb_close_btn {
   width: 85%;
   display: flex;
   flex-flow: row nowrap;
   justify-content: flex-end;
 }
-body header .left_nav .gnb_wrap #gnb {
+body header .left_nav .logo_gnb_icon .gnb_wrap #gnb {
   max-width: 220px;
   width: 100%;
   display: flex;
   flex-flow: column nowrap;
   gap: 25px;
-  /* 라인별 등등 */
 }
-body header .left_nav .gnb_wrap #gnb .gnb_menu_title {
-  /* Global Menu Name */
-}
-body header .left_nav .gnb_wrap #gnb .gnb_menu_title > a {
+body header .left_nav .logo_gnb_icon .gnb_wrap #gnb .gnb_menu_title > a {
   font-weight: 500;
   letter-spacing: -0.02rem;
   color: #594632;
 }
-body header .left_nav .gnb_wrap #gnb .gnb_menu_title .gnb_sub {
+body header .left_nav .logo_gnb_icon .gnb_wrap #gnb .gnb_menu_title {
+  /* Global Menu Name */
+}
+body header .left_nav .logo_gnb_icon .gnb_wrap #gnb .gnb_menu_title .gnb_sub {
   display: flex;
   flex-flow: column nowrap;
 }
-body header .left_nav .gnb_wrap #gnb .gnb_menu_title .gnb_sub .gnb_sub_title {
+body header .left_nav .logo_gnb_icon .gnb_wrap #gnb .gnb_menu_title .gnb_sub .gnb_sub_title {
   margin-top: 25px;
   font-weight: 300;
   letter-spacing: -0.02rem;
   font-size: 0.875rem;
 }
-body header .left_nav .gnb_wrap #gnb .gnb_menu_title .gnb_sub .menu_category {
+body header .left_nav .logo_gnb_icon .gnb_wrap #gnb .gnb_menu_title .gnb_sub .menu_category {
   margin: 10px 0;
   display: flex;
   flex-flow: row wrap;
   gap: 10px;
 }
-body header .left_nav .gnb_wrap #gnb .gnb_menu_title .gnb_sub .menu_category > li a {
+body header .left_nav .logo_gnb_icon .gnb_wrap #gnb .gnb_menu_title .gnb_sub .menu_category > li a {
   font-weight: 300;
   letter-spacing: -0.02rem;
   font-size: 0.813rem;
   color: #2C2C2C;
 }
+body header .left_nav .logo_gnb_icon .gnb_wrap #gnb {
+  /* 라인별 등등 */
+}
+body header .left_nav .logo_gnb_icon {
+  /* #main_menu_btn:hover + .gnb_wrap {
+          display: block;
+      }  */
+}
+body header .right_nav {
+  position: absolute;
+  top: 10%;
+  right: 2%;
+  height: 50px;
+}
 body header .right_nav #right_menu_icons {
+  height: 100%;
+  position: relative;
   display: flex;
   flex-flow: row nowrap;
   gap: 15px;
   justify-content: flex-start;
   align-items: center;
 }
-body header .right_nav .search_wrap {
+body header .right_nav #right_menu_icons:hover .search_box {
+  display: block;
+}
+body header .right_nav #right_menu_icons .search_box {
   display: none;
-  /* @include flex-col; */
-  gap: 30px; /* flex 나중에 풀기 */
+}
+body header .right_nav #right_menu_icons .search_box .search_wrap {
+  display: flex;
+  flex-flow: column nowrap;
+  gap: 30px;
   justify-content: flex-start;
   align-items: center;
   background-color: rgba(205, 193, 176, 0.85);
@@ -99,8 +128,11 @@ body header .right_nav .search_wrap {
   height: 807px;
   border-top-left-radius: 60px;
   padding-top: 85px;
+  position: absolute;
+  top: 100%;
+  right: 3%;
 }
-body header .right_nav .search_wrap .close_search {
+body header .right_nav #right_menu_icons .search_box .search_wrap .close_search {
   display: flex;
   flex-flow: row nowrap;
   gap: 15px;
@@ -108,7 +140,7 @@ body header .right_nav .search_wrap .close_search {
   align-items: center;
   width: 100%;
 }
-body header .right_nav .search_wrap .close_search .search_form #menu_search_input {
+body header .right_nav #right_menu_icons .search_box .search_wrap .close_search .search_form #menu_search_input {
   background-color: #F6F1E6;
   padding-left: 10px;
   border-radius: 9px;
@@ -116,26 +148,26 @@ body header .right_nav .search_wrap .close_search .search_form #menu_search_inpu
   width: 448px;
   height: 30px;
 }
-body header .right_nav .search_wrap .rec_keywords {
+body header .right_nav #right_menu_icons .search_box .search_wrap .rec_keywords {
   display: flex;
   flex-flow: column nowrap;
   gap: 15px;
   justify-content: center;
   align-items: center;
 }
-body header .right_nav .search_wrap .rec_keywords h3 {
+body header .right_nav #right_menu_icons .search_box .search_wrap .rec_keywords h3 {
   font-size: 0.875rem;
   letter-spacing: -0.02rem;
   font-weight: 300;
 }
-body header .right_nav .search_wrap .rec_keywords .keyword_row {
+body header .right_nav #right_menu_icons .search_box .search_wrap .rec_keywords .keyword_row {
   display: flex;
   flex-flow: row nowrap;
   gap: 15px;
   justify-content: center;
   align-items: center;
 }
-body header .right_nav .search_wrap .rec_keywords .keyword_row > a {
+body header .right_nav #right_menu_icons .search_box .search_wrap .rec_keywords .keyword_row > a {
   font-size: 0.75rem;
   letter-spacing: -0.02rem;
   color: #F6F1E6;
@@ -147,7 +179,6 @@ body main {
   /* 공통 */
 }
 body main * .prd_link {
-  width: -moz-max-content;
   width: max-content;
   display: block;
 }
@@ -171,7 +202,6 @@ body main * .prd_eng_name {
   letter-spacing: -0.02rem;
 }
 body main * .prd_tag {
-  width: -moz-max-content;
   width: max-content;
   height: 22px;
   padding: 4px 15px;
@@ -193,20 +223,25 @@ body main * .price {
   font-weight: 200;
   letter-spacing: -0.02rem;
 }
+body main * .del_price {
+  font-size: clamp(0.75rem, 2vw, 0.875rem);
+  line-height: 100%;
+  font-weight: 300;
+  letter-spacing: -0.02rem;
+  color: #BDBDBD;
+}
 body main * .product_card {
   display: flex;
   flex-flow: column nowrap;
   justify-content: center;
   align-items: flex-start;
   gap: 12px;
-  width: -moz-max-content;
   width: max-content;
 }
 body main * .best_prd_img {
   width: 100%;
   aspect-ratio: 380/379;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   display: block;
 }
 body main * .more_btn {
@@ -329,8 +364,8 @@ body main .best_sec .best_left_wrap {
   background-repeat: no-repeat;
   background-size: cover;
   background-image: url(../images/best_bg.png);
-  max-width: 959px;
-  max-height: 918px;
+  max-width: 900px;
+  max-height: 100vh;
   width: 100%;
   min-width: 314px;
   aspect-ratio: 959/918;
@@ -340,8 +375,8 @@ body main .best_sec .best_left_wrap {
   top: 0;
 }
 body main .best_sec .best_right_wrap {
-  max-width: calc(100% - 1019px);
   width: 100%;
+  max-width: 959px;
   padding: 30px 30px 70px 30px;
 }
 body main .best_sec .best_right_wrap .product_wrap {
@@ -386,7 +421,9 @@ body main .recom_sec .sect_title {
   text-align: center;
 }
 body main .recom_sec .product_wrap {
-  margin-top: 60px;
+  max-width: 1550px;
+  width: 100%;
+  margin: 60px auto;
 }
 body main .recom_sec .product_wrap .product_row {
   display: flex;
@@ -401,6 +438,9 @@ body main .recom_sec .product_wrap .product_row .prd_link .product_card .prd_inf
   background-color: rgba(14, 162, 102, 0.1);
   color: #0EA266;
 }
+body main .recom_sec .product_wrap .row3 {
+  display: none;
+}
 body main .etsere_bnr {
   padding: 40px 0;
 }
@@ -409,6 +449,7 @@ body main .etsere_bnr .bnr_wrap {
   background-repeat: no-repeat;
   background-size: cover;
   background-image: url(../images/etsere_bnr.jpg);
+  background-position: right;
   aspect-ratio: 1920/915;
   width: 100%;
   max-width: 1920px;
@@ -445,11 +486,28 @@ body main .etsere_bnr .bnr_wrap .bnr_popup #bnr_plus_btn {
   top: -15px;
   left: -10px;
 }
+body main .etsere_bnr .bnr_wrap .bnr_popup .prd_name {
+  font-size: clamp(0.75rem, 1vw, 0.875rem);
+}
 body main .etsere_bnr .bnr_wrap .bnr_popup .prd_eng_name {
+  font-size: clamp(0.75rem, 1vw, 0.875rem);
   padding: 8px 0;
+}
+body main .etsere_bnr .bnr_wrap .bnr_popup .price {
+  font-size: clamp(0.875rem, 1vw, 1rem);
 }
 body main .new_sec .sect_title {
   text-align: center;
+}
+body main .new_sec .swiper_box #swiper_new_prd .swiper-wrapper .swiper-slide .prd_link {
+  width: 100%;
+}
+body main .new_sec .swiper_box #swiper_new_prd .swiper-wrapper .swiper-slide .prd_link .product_card .price_row {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: center;
+  align-items: center;
+  gap: 4px;
 }
 body main .new_sec .swiper_box #swiper_new_prd .swiper-button-prev:after {
   position: absolute;
@@ -492,13 +550,17 @@ body main .essential_sec .left_wrap {
   background-size: cover;
   background-position: left;
   background-image: url(../images/essential_bnr.jpg);
+  border-bottom-right-radius: 80px;
+  aspect-ratio: 811/614;
   max-width: 811px;
   width: 100%;
-  border-bottom-right-radius: 80px;
+  min-width: 440px;
+  max-height: 614px;
 }
 body main .essential_sec .right_wrap {
   padding: 100px 20px;
-  width: calc(100% - 931px);
+  width: 100%;
+  max-width: 1100px;
 }
 body main .essential_sec .right_wrap .title_box {
   margin-bottom: 60px;
@@ -554,20 +616,30 @@ body main .review_sec .swiper_box #review_swiper .swiper-wrapper .swiper-slide .
   justify-content: center;
   align-items: center;
 }
+body main .review_sec .swiper_box #review_swiper .swiper-wrapper .swiper-slide .review_info .stars_name_date .score_name .stars_box {
+  display: flex;
+  flex-flow: row nowrap;
+  gap: 2px;
+}
+body main .review_sec .swiper_box #review_swiper .swiper-wrapper .swiper-slide .review_info .stars_name_date .score_name .stars_box > svg {
+  aspect-ratio: 1/1;
+  width: clamp(8px, 2vw, 20px);
+}
 body main .review_sec .swiper_box #review_swiper .swiper-wrapper .swiper-slide .review_info .stars_name_date .score_name .reviewer_name {
-  font-size: 0.875rem;
+  font-size: clamp(0.625rem, 1vw, 0.875rem);
   font-weight: 500;
+  white-space: nowrap;
   color: #594632;
   letter-spacing: -0.02rem;
 }
 body main .review_sec .swiper_box #review_swiper .swiper-wrapper .swiper-slide .review_info .stars_name_date .date {
-  font-size: 0.75rem;
+  font-size: clamp(0.625rem, 1vw, 0.75rem);
   color: #BDBDBD;
   font-weight: 300;
   letter-spacing: -0.02rem;
 }
 body main .review_sec .swiper_box #review_swiper .swiper-wrapper .swiper-slide .review_info .review_content p {
-  font-size: 0.875rem;
+  font-size: clamp(0.625rem, 1vw, 0.875rem);
   font-weight: 200;
   line-height: 140%;
   letter-spacing: -0.02rem;
@@ -587,11 +659,11 @@ body main .review_sec .swiper_box #review_swiper .swiper-wrapper .swiper-slide .
   gap: 8px;
 }
 body main .review_sec .swiper_box #review_swiper .swiper-wrapper .swiper-slide .review_info .review_prd_wrap .prd_info .prd_name {
-  font-size: 0.625rem;
+  font-size: clamp(0.5rem, 1vw, 0.625rem);
   letter-spacing: -0.02rem;
 }
 body main .review_sec .swiper_box #review_swiper .swiper-wrapper .swiper-slide .review_info .review_prd_wrap .prd_info .price {
-  font-size: 0.625rem;
+  font-size: clamp(0.5rem, 1vw, 0.625rem);
   letter-spacing: -0.02rem;
 }
 body main .review_sec .swiper_box #review_swiper .swiper-button-next,
@@ -607,80 +679,65 @@ body main .review_sec .swiper_box #review_swiper .swiper-button-next {
 body main .review_sec .swiper_box #review_swiper .swiper-button-prev {
   left: -30px;
 }
-body main .footer {
-  background-color: #2A2625;
-}
-body main .footer h1, body main .footer a, body main .footer p, body main .footer h3, body main .footer span, body main .footer address {
-  color: #fff;
-}
-body main .footer .ft_left {
-  display: flex;
-  flex-flow: column nowrap;
-  gap: 23px;
-  align-items: flex-start;
-  justify-content: center;
-}
-body main .footer .ft_left .logo > a {
-  font-size: clamp(1.2rem, 2vw, 1.625rem);
-  font-family: "NanumMyeongjo";
-}
-body main .footer .ft_left .cs_center p {
-  font-size: clamp(0.8rem, 2vw, 1rem);
-}
-body main .footer .ft_left .cs_center .phone {
-  font-size: clamp(1rem, 2vw, 1.25rem);
-}
-body main .footer .ft_left .schedule p {
-  font-size: 0.813rem;
-}
-body main .footer .ft_right {
-  display: flex;
-  flex-flow: column nowrap;
-  gap: 20px;
-  align-items: flex-start;
-  justify-content: center;
-}
-body main .footer .ft_right .ft_menu .ft_menu_list {
-  display: flex;
-  flex-flow: row nowrap;
-  gap: 22px;
-}
-body main .footer .ft_right .basic_info {
-  display: flex;
-  flex-flow: column nowrap;
-  gap: 8px;
-}
-body main .footer .ft_right .basic_info h3 {
-  font-size: 0.75rem;
-}
-body main .footer .ft_right .basic_info span {
-  font-size: 0.75rem;
-}
-body main .footer .ft_right address {
-  font-size: 0.75rem;
-}
-body main .footer .ft_right span {
-  font-size: 0.75rem;
-}
-body main .footer .ft_right .fax_hosting {
-  font-size: 0.75rem;
-}
-body main .footer .ft_right .ask_wrap span {
-  font-size: 0.75rem;
-}
-body main .footer .ft_right .copyright {
-  font-size: 0.75rem;
-}
 
+@media screen and (max-width: 1549px) {
+  body main * section {
+    padding: 0 30px;
+  }
+  body main .recom_sec {
+    padding: 30px;
+  }
+  body main .recom_sec .product_wrap .product_row .link4 {
+    display: none;
+  }
+  body main .new_sec {
+    padding: 0 30px;
+  }
+  body main .new_sec img {
+    aspect-ratio: 348/383;
+    width: 348px;
+  }
+  body main .essential_sec {
+    flex-flow: column nowrap;
+  }
+  body main .essential_sec .left_wrap {
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-image: url(../images/essential_bnr_tablet.png);
+    border-radius: 0;
+    aspect-ratio: 1549/364;
+    max-width: 1549px;
+    width: 100%;
+    min-width: 440px;
+    max-height: 364px;
+  }
+  body main .essential_sec .right_wrap {
+    max-width: unset;
+  }
+  body main .review_sec {
+    padding: 30px;
+  }
+}
 @media screen and (max-width: 1250px) {
   body {
     min-width: 1023px;
   }
-  body main * section {
-    padding: 0 30px;
-  }
   body main .main_bnr #main_swiper .swiper-wrapper .swiper-slide span {
     left: 146px;
+    top: 230px;
+  }
+  body main .main_bnr #main_swiper .swiper-wrapper .main_bnr1 {
+    background-image: url(../images/main_bnr_tablet_001.jpg);
+  }
+  body main .main_bnr #main_swiper .swiper-wrapper .main_bnr2 {
+    background-image: url(../images/main_bnr_tablet_002.jpg);
+  }
+  body main .main_bnr #main_swiper .swiper-wrapper .main_bnr3 {
+    background-image: url(../images/main_bnr_tablet_003.jpg);
+  }
+  body main .main_bnr #main_swiper .swiper-wrapper .main_bnr4 {
+    background-image: url(../images/main_bnr_tablet_004.jpg);
   }
   body main .best_sec {
     display: flex;
@@ -695,6 +752,7 @@ body main .footer .ft_right .copyright {
   }
   body main .best_sec .best_right_wrap {
     max-width: 1250px;
+    padding: 15px 15px 30px 15px;
   }
   body main .best_sec .best_right_wrap .product_wrap .product_row {
     justify-content: space-evenly;
@@ -723,6 +781,13 @@ body main .footer .ft_right .copyright {
   body main .etsere_bnr .bnr_wrap .bnr_popup img {
     width: 70px;
   }
+  body footer {
+    flex-flow: column nowrap;
+    padding: 30px;
+  }
+  body footer .ft_left .official {
+    display: none;
+  }
 }
 @media screen and (max-width: 1024px) {
   body {
@@ -735,20 +800,48 @@ body main .footer .ft_right .copyright {
     left: 46px;
   }
   body main .best_sec .best_right_wrap {
-    max-width: 10224px;
+    max-width: 1024px;
   }
   body main .best_sec .best_right_wrap .product_wrap .product_row .prd_link.card_3, body main .best_sec .best_right_wrap .product_wrap .product_row .prd_link.card_6, body main .best_sec .best_right_wrap .product_wrap .product_row .prd_link.card_9 {
     display: none;
   }
   body main .best_sec .best_right_wrap .product_wrap .product_row .prd_link .product_card .best_prd_img {
-    aspect-ratio: 248/283;
-    width: 248px;
+    aspect-ratio: 200/283;
+    width: 200px;
+  }
+  body main .recom_sec {
+    padding: 15px;
   }
   body main .recom_sec .product_wrap .product_row {
     justify-content: space-evenly;
   }
   body main .recom_sec .product_wrap .product_row .prd_link .product_card > img {
-    aspect-ratio: 248/283;
-    width: 248px;
+    aspect-ratio: 200/283;
+    width: 200px;
   }
-}/*# sourceMappingURL=main.css.map */
+  body main .recom_sec .product_wrap .product_row .link3 {
+    display: none;
+  }
+  body main .recom_sec .product_wrap .row3 {
+    display: flex;
+  }
+  body main .etsere_bnr .bnr_wrap > span {
+    max-width: 146px;
+  }
+  body main .new_sec img {
+    aspect-ratio: 200/283;
+    width: 200px;
+  }
+  body main .essential_sec img {
+    aspect-ratio: 200/283;
+    width: 200px;
+  }
+  body main .review_sec {
+    padding: 15px;
+  }
+  body main .review_sec .swiper_box #review_swiper .swiper-wrapper .swiper-slide .review_info .stars_name_date .score_name {
+    gap: 4px;
+  }
+}
+
+/*# sourceMappingURL=main.css.map */
